# lidar-slam-mapping

./: README.md
lidar-slam-mapping/: .gitignore  README.md
lidar-slam-mapping/maps/: kitchen_slam_final.pgm  kitchen_slam_map.pbstream
lidar-slam-mapping/my_bot/config/: my_controllers.yaml
lidar-slam-mapping/my_bot/description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
lidar-slam-mapping/my_bot/launch/: launch_sim.launch.py  nav2.launch.py  slam.launch.py
maps/: README.md  kitchen_slam_final.yaml
my_bot/: CMakeLists.txt  package.xml
my_bot/config/: cartographer.lua  gazebo_params.yaml  nav2_params.yaml  sensors.yaml  slam_toolbox.yaml
my_bot/description/: gazebo_control.xacro
my_bot/description/models/kitchen_dining/: model.sdf
my_bot/launch/: cartographer.launch.py  gazebo_only.launch.py  slam_verbose.launch.py  test_sim.launch.py
my_bot/worlds/: empty_world.world
